- setup.sh had a wrong entry for EULA-file 
- directory master and slave removed
- Fixed a BIG Bug.We should not check for software that is part of the bluray 
  functions if the user do not install the bluray option during the execution of 
  setup.sh
- we should allwayas send data with tcp instead of udp. 


----------------------------------------------------------------------------------------------------
Date : 09.06.2010 | Release : 0.6.15    | Author  : H.Weber | CVS:279
----------------------------------------------------------------------------------------------------


Changes:

- test $SHELL inside setup.sh prior to execute anything.
- Print path if some or all paths do not exist inside the 
  logs including not writeable.
- All shell-shell scripts do check if shell is /bin/bash. 
- Create Folder for user-shell scripts during the execution
  of setup.sh 
- added transcode folder for transcoding jobs into setup.sh
- Added more strings including future messages. 
  (In this case the addon can allready be translated to other languages)
- Added Transcode & Burning menu to Expert-Mode
- Added dvd-mpeg2.sh to svn. 
- Added User-Shell Functions menu to Expert-Mode.
- Print release version inside the log.
- Print mutch more logs if verbose mode is active.
- Prevent that user-uid 0 (root) can execute the shell-scripts.
- Create ssh-folder with setup.sh
- All commands that are executed over ssh are storend inside $HOME/swiss.army.knife/ssh/output
- Added dvd-mkv.sh to svn 
- Integrate dvd-mkv.sh into addon
- Added dvd-low.sh to svn

Fixes:

- Until we have a Release Candidate the verbose flag will be set default to on.
- Language-ID for network windows were wrong (fixed).
- Range for Network messages moved.
- same error-level for all shell-scripts "tool not found"
- Typo inside shell-scripts.
- Test if we use makemkvcon inside a script that the command is running.
- Typo inside dvd-handbrake.sh / text about passes fixed.

 
 


